trabajando en SecTec

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -6,7 +6,7 @@
         "contact":"Contact"
     },
     "presentation":{
-        "specialty":"Frontend developer",
+        "specialty":"FrontEnd developer",
         "summary":"Welcome to my portfolio! I am a graduate programmer from the UTN FRGP in  Argentina. Currently, I am exploring this vast world and learning to one day contribute my bit to the community "
     }
 }
