--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -7,7 +7,7 @@
 
     },
     "presentation":{
-        "specialty":"Desarrollador Frontend",
+        "specialty":"Desarrollador FrontEnd",
         "summary":"¡Bienvenido a mi portafolio! Soy programador graduado de la UTN FRGP en Argentina. Actualmente sigo explorando este gran mundo y aprendiendo para algun día aportar mi granito de arena a la comunidad."
 
     }
