--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -1,7 +1,7 @@
 {
     "header":{
         "about-me":"Home",
-        "technologies":"technologies",
+        "technologies":"Technologies",
         "projects":"Projects",
         "contact":"Contact"
     },
