--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -10,5 +10,11 @@
         "specialty":"Desarrollador FrontEnd",
         "summary":"¡Bienvenido a mi portafolio! Soy programador graduado de la UTN FRGP en Argentina. Actualmente sigo explorando este gran mundo y aprendiendo para algun día aportar mi granito de arena a la comunidad."
 
+    },
+    "technologies":{
+        "title":"Tecnologías",
+        "description": "En esta sección, te presento las tecnologías que utilizo como programador. Además, compartiré algunos recursos útiles que pueden servirte."
+
     }
+
 }
