--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -1,28 +1,32 @@
 {
-    "header":{
-        "about-me":"Inicio",
-        "technologies":"Tecnologías",
-        "projects":"Proyectos",
-        "contact":"Contacto"
-
+    "header": {
+        "about-me": "Inicio",
+        "technologies": "Tecnologías",
+        "projects": "Proyectos",
+        "contact": "Contacto"
     },
-    "presentation":{
-        "specialty":"Desarrollador FrontEnd",
-        "summary":"¡Bienvenido a mi portafolio! Soy programador graduado de la UTN FRGP en Argentina. Actualmente sigo explorando este gran mundo y aprendiendo para algun día aportar mi granito de arena a la comunidad."
-
+    "presentation": {
+        "specialty": "Desarrollador FrontEnd",
+        "summary": "¡Bienvenido a mi portafolio! Soy programador graduado de la UTN FRGP en Argentina. Actualmente sigo explorando este gran mundo y aprendiendo para algun día aportar mi granito de arena a la comunidad."
     },
-    "projects":{
-        "title":"Projectos"
+    "projects": {
+        "title": "Projectos"
     },
-    "technologies":{
-        "title":"Tecnologías",
+    "technologies": {
+        "title": "Tecnologías",
         "description": "En esta sección, te presento las tecnologías que utilizo como programador. Además, compartiré algunos recursos útiles que pueden servirte."
-
     },
-    "contact":{
-        "title":"Contacto",
-        "descriptionOne":"Si tienes alguna consulta, pregunta o simplemente quieres hablar sobre este gran mundo de la programación u otras cosas interesantes, contáctame.",
-        "descriptionTwo":"El campo de correo electrónico es opcional, pero si deseas que me comunique contigo, es necesario que lo completes."
+    "contact": {
+        "title": "Contacto",
+        "descriptionOne": "Si tienes alguna consulta, pregunta o simplemente quieres hablar sobre este gran mundo de la programación u otras cosas interesantes, contáctame.",
+        "descriptionTwo": "El campo de correo electrónico es opcional, pero si deseas que me comunique contigo, es necesario que lo completes."
+    },
+    "footer": {
+        "specialty": "Desarrollador FrontEnd",
+        "education": "Educación",
+        "certificates": "Certificados",
+        "titleQuote": "Cita Inspiradora",
+        "quote":"Manténganse hambrientos, manténganse alocados.",
+        "copyRight":"Todos los derechos reservados"
     }
-
 }
