Modificaciones en view ini

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -6,6 +6,7 @@
         "contact": "Contact"
     },
     "presentation": {
+        "greeting": "hey, I'm Céstell",
         "specialty": "FrontEnd developer",
         "summary": "Welcome to my portfolio! I am a graduate programmer from the UTN FRGP in  Argentina. Currently, I am exploring this vast world and learning to one day contribute my bit to the community "
     },
