--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -6,6 +6,7 @@
         "contact": "Contacto"
     },
     "presentation": {
+        "greeting": "hola, soy Céstell",
         "specialty": "Desarrollador FrontEnd",
         "summary": "¡Bienvenido a mi portafolio! Soy programador graduado de la UTN FRGP en Argentina. Actualmente sigo explorando este gran mundo y aprendiendo para algun día aportar mi granito de arena a la comunidad."
     },
